# Masked-Ascon-C

./: instructions.txt  simpleserial-ascon.sh
simpleserial-ascon/: CMakeLists.txt  CMakeLists_demo.txt  simpleserial-ascon.c
src/: CMakeLists.txt  CMakeLists_Custom.txt  aead.c  api_2_shares.h  api_3_shares.h  api_4_shares.h  ascon.h  asm.h  checking_equivalence.c  crypto_aead.c  crypto_aead.h  demo.c  demo.h  gcc_toolchain_Custom.cmake  interleave.c  interleave.h  print_simulation.c  print_simulation.h  printstate.c  shares.c  shares.h  word.h
